<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/paddingTopBottonLayout"
    android:paddingLeft="@dimen/paddingRigthLeftLayout"
    android:paddingRight="@dimen/paddingRigthLeftLayout"
    android:paddingTop="@dimen/paddingTopBottonLayout"
    tools:context="com.hetherlat.numerallove.MuestraNumeroPersonalidadActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_views"
        android:background="@color/YellowGreen"

        android:padding="@dimen/pading_title"
        android:text="@string/mnp_TitleActvity"

        android:textColor="@color/DarkRed"
        android:textSize="@dimen/xxlarge" />

    <ImageView
        android:id="@+id/imgNumeroPersonalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:cropToPadding="false"
        android:focusable="false"
        android:longClickable="false"
        android:scaleType="center"
        android:src="@mipmap/ic_andy" />

    <TextView
        android:id="@+id/txvTituloNumeroPersonalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_views"
        android:background="@color/YellowGreen"

        android:padding="@dimen/pading_title"
        android:text="@string/mnp_TituloNumero"

        android:textColor="@color/DarkRed"
        android:textSize="@dimen/xxlarge" />

    <TextView
        android:id="@+id/txvDescripcionNumeroPersonalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_views"
        android:background="@color/YellowGreen"

        android:padding="@dimen/pading_title"
        android:text="@string/mnp_DescripcionNumero"

        android:textColor="@color/DarkRed"
        android:textSize="@dimen/small" />
</LinearLayout>
